--- a/js+react/style.scss
+++ b/js+react/style.scss
@@ -2,3 +2,15 @@ body {
   background: #202124;
   color: white;
 }
+
+.main {
+  padding: 50px 0;
+}
+
+.main__btn {
+  max-width: 300px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
