--- a/js+react/JavaScript/_draft/style/style.css
+++ b/js+react/JavaScript/_draft/style/style.css
@@ -1,13 +1,34 @@
+* {
+  font-family: "Roboto", sans-serif; }
+
 body {
   background: #202124;
   color: white; }
 
 .main {
-  padding: 50px 0; }
+  padding-bottom: 50px; }
 
 .main__btn {
-  max-width: 300px;
+  max-width: 100%;
+  width: 100%;
   height: 60px;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  border: 5px solid darkorange;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 20px; }
+
+.lesson-64 {
+  padding: 50px 0; }
+  .lesson-64 .box {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    border: 3px solid red; }
+  .lesson-64 .cube {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background: #fff; }
