--- a/js+react/JavaScript/_draft/style/style.css
+++ b/js+react/JavaScript/_draft/style/style.css
@@ -32,3 +32,10 @@ body {
     width: 100px;
     height: 100px;
     background: #fff; }
+
+.box1 {
+  color: black;
+  width: 500px;
+  height: 500px;
+  margin: 20px auto;
+  background-color: #fff; }
