--- a/js+react/JavaScript/_draft/style/style.scss
+++ b/js+react/JavaScript/_draft/style/style.scss
@@ -40,3 +40,11 @@ body {
     background: #fff;
   }
 }
+
+.box1 {
+  color: black;
+  width: 500px;
+  height: 500px;
+  margin: 20px auto;
+  background-color: #fff;
+}
